--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:functions": "npx wrangler pages dev ./ --r2 peerPilotR2 peer-pilot",
+    "dev:functions": "npx wrangler pages dev ./ --r2 peerPilotR2 peer-pilot --port 8788",
+    "dev:nuxt": "nuxt dev",
     "generate": "nuxt generate"
   },
   "author": "",
