--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ts-node test/buffer.spec.ts",
     "dev:functions": "npx wrangler pages dev ./ --r2 peerPilotR2 peer-pilot --port 8788",
     "dev:nuxt": "nuxt dev",
+    "dev:deno": "deno run --allow-net=:8788 --unstable --watch deno/websocket.ts",
     "generate": "MODE=production nuxt generate"
   },
   "author": "",
